--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -184,7 +184,7 @@ button {
 
 .scroll-header {
   background: var(--body-color);
-  box-shadow: 0 0 5px hsla(206, 4%, 30%, 0.2);
+  box-shadow: 0 1px 3px hsl(206, 0%, 4%);
 }
 
 /*@@@@@@@@@@@@@@@@@ home @@@@@@@@@@@@@@@@ */
@@ -494,7 +494,7 @@ button {
 
 .footer__copy {
   margin-top: 7rem;
-  font-size: 0.6rem;
+  font-size: 0.55rem;
   text-align: center;
 }
 
