--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -68,7 +68,7 @@
     width: 70%;
     background: var(--body-color);
     padding: 5rem 3rem 3rem;
-    box-shadow: 0 0 5px hsla(206, 4%, 30%, 0.2);
+    box-shadow: 0 1px 3px hsl(206, 0%, 4%);
     transition: 0.5s;
   }
 
